--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	compileOnly 'org.apache.httpcomponents:httpcore:4.4.1'
+    compileOnly 'org.apache.httpcomponents:httpclient:4.5'
+	compileOnly 'org.apache.httpcomponents:httpmime:4.5.14'
 }
 
 tasks.named('test') {
