--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	compileOnly 'org.apache.httpcomponents:httpcore:4.4.1'
     compileOnly 'org.apache.httpcomponents:httpclient:4.5'
 	compileOnly 'org.apache.httpcomponents:httpmime:4.5.14'
+	implementation 'org.jsoup:jsoup:1.14.3'
 }
 
 tasks.named('test') {
