파일 업로드 수정

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
 }
 
 compileJava {
-    options.compilerArgs << "-parameters"
+    options.compilerArgs << '-parameters'
 }
 
 dependencies {
