--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	compileOnly 'org.apache.httpcomponents:httpmime:4.5.14'
 	implementation 'org.jsoup:jsoup:1.14.3'
 	implementation 'org.apache.commons:commons-text:1.9'
+	implementation 'commons-net:commons-net:3.8.0'
 }
 
 tasks.named('test') {
